<resources>
    <string name="app_name">PR Calibradores</string>

    <!--Activity main-->
    <string name="PRImage">PR</string>
    <string name="processButton">Proceso</string>
    <string name="consultButton">Consulta</string>
    <string name="logoutButton">Logout</string>

    <!--CronometroActivity-->
    <string name="title">Proceso</string>
    <string name="pieceName">Pieza</string>
    <string name="finalTimeLabel">Tiempo final</string>
    <string name="finalTime">Tiempo final resultado</string>
    <string name="playPauseButton">PlayPause</string>
    <string name="stopButton">Stop</string>
    <string name="deathButton">Death</string>
    <string name="si">Sí</string>
    <string name="no">No</string>


    <!--LoginActivity-->
    <string name="loginPRImage">Imagen PR</string>
    <string name="usernameInputText">Nombre de usuario</string>
    <string name="usernameText">Nombre de usuario: </string>
    <string name="passwordInputText">Contraseña</string>
    <string name="passwordText">Contraseña: </string>
    <string name="loginButton">Entrar </string>
    <string name="PR">PR Calibradores</string>


    <!--ProcesessActivity-->
    <string name="titleProcesses">Procesos</string>

    <!--ProcessesListRow-->
    <string name="IDProcesses">ID:</string>
    <string name="nameProcesses">Nombre:</string>

    <!--ProjectsActivity-->
    <string name="titleProjects">Proyectos</string>

    <!--ProjectsListRow-->
    <string name="IDProjects">ID:</string>
    <string name="nameProjects">Nombre:</string>
    <string name="statusProjects">Estado:</string>
    <string name="descriptionProjects">Descripcion:</string>
    <string name="startDateProjects">Fecha de inicio:</string>
    <string name="finishDateProjects">Fecha de entrega:</string>

    <!--ModelsActivity-->
    <string name="titleModels">Modelos</string>

    <!--ModelsListRow-->
    <string name="IDModels">ID:</string>
    <string name="nameModels">Nombre:</string>
    <string name="descriptionModels">Descripcion:</string>

    <!--Splash screen-->
    <string name="splashScreenImage">Imagen PR</string>

    <!-- Dialog terminated piece -->
    <string name="dialog_title">Proceso terminado</string>
    <string name="dialog_message"> %1$s. ¿Quiere hacer otra pieza igual?</string>
    <string name="dialog_next_process">Siguiente proceso: </string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_processes_terminated">No hay mas procesos</string>

</resources>
